--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script>
     if ('serviceWorker' in navigator) {
     window.addEventListener('load', function () {
-        navigator.serviceWorker.register('/js.sw.js', {scope: '/'})
+        navigator.serviceWorker.register('/js/sw.js', {scope: '/'})
             .then(function (registration) {
 
                 // 注册成功
