--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script>
     if ('serviceWorker' in navigator) {
     window.addEventListener('load', function () {
-        navigator.serviceWorker.register('sw.js', {scope: '/a1047050321.github.io/'})
+        navigator.serviceWorker.register('sw.js', {scope: '/'})
             .then(function (registration) {
 
                 // 注册成功
